# TinyBpfLog

./: CMakeLists.txt  build.sh  main.cpp
backend/: CMakeLists.txt  Catalog.cc  Catalog.h  Monitor.cc  Monitor.h  Server.cc  Server.h  utils.h
bpftools/: CMakeLists.txt  common.cc  common.h  ipc.bpf.c  ipc.h  ipc_monitor.cc  minimal.bpf.c  minimal.cc  monitors.h  mount.bpf.c  mount.h  mount_monitor.cc  process.bpf.c  process.cc  process.h  process_monitor.cc  process_monitor.h  process_tracer.h  tcpstate.bpf.c  tcpstate.h  tcpstate_monitor.cc
frontend/: client.go  command.go  main.go  message.go  test_msg
runtime/: CMakeLists.txt  Log.cc  NanoLogCpp17.h  Perf.cc
src/: CMakeLists.txt  Catalog.cc  Catalog.h  Monitor.cc  Monitor.h  utils.h
test/: CMakeLists.txt  class_for_test.h  monitor_test.cc  process_test.cc  server_test.cc
